--- a/README.adoc
+++ b/README.adoc
@@ -35,7 +35,7 @@ My fish configuration relies on other utilities: {carapace-bin} for completions,
 +
 [,sh]
 ----
-git clone git@github.com:jwillikers/fish-config.git
+git clone git@codeberg.org:jwillikers/fish-config.git
 ----
 
 . Change to the project's directory.
